# tutor_booking_platform

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
tutor_booking_platform/: demo_data.py  fix_payment_issue.py  hooks.py  install.py  modules.txt  notifications.py
tutor_booking_platform/api/: __init__.py  booking.py  contact.py  demo_class.py  registration.py
tutor_booking_platform/doctype/attendance_record/: attendance_record.js  attendance_record.json  attendance_record.py
tutor_booking_platform/doctype/card_payment/: card_payment.js  card_payment.json  card_payment.py
tutor_booking_platform/doctype/cash_payment/: cash_payment.js  cash_payment.json  (+1 more)
tutor_booking_platform/events/: attendance_record.py  demo_class_request.py  payment_transaction.py  refund_request.py  tutor_booking.py  tutor_review.py  tutor_session.py
tutor_booking_platform/module_def/: tutor_booking_platform.json
tutor_booking_platform/permissions/: payment_transaction.py  tutor_booking.py  tutor_session.py
tutor_booking_platform/tasks/: daily.py  hourly.py  monthly.py  weekly.py
tutor_booking_platform/templates/: base.html
tutor_booking_platform/utils/: jinja_helpers.py
tutor_booking_platform/workspace/: tutor_booking.json
tutor_booking_platform/www/: about.html  contact.html  courses.html  demo-class-request.html  faq.html  index.html  login.html  privacy-policy.html  reviews.html  search.html  student-registration.html  subjects.html  terms.html  tutor-registration.html  tutor_detail.html  tutor_detail.py  tutors.html  tutors.py
(+265 files in other folders)
