[project]
name = "tutor_booking_platform"
authors = [
    {name = "Antigravity", email = "info@antigravity.dev"}
]
description = "A production-ready Tutor Booking Platform built on Frappe v15 and ERPNext v15"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "frappe>=15.0.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "tutor_booking_platform"

[tool.black]
line-length = 99